--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8084
+  port: 8088
 
 spring:
   application:
@@ -7,7 +7,7 @@ spring:
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:dev}
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/techhub1}
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/techhub3}
     username: ${SPRING_DATASOURCE_USERNAME:postgres}
     password: ${SPRING_DATASOURCE_PASSWORD:123456}
     driver-class-name: org.postgresql.Driver
@@ -19,6 +19,19 @@ spring:
       hibernate:
         dialect: com.techhub.app.commonservice.jpa.PostgreSQLEnumDialect
         format_sql: true
+  mail:
+    host: ${SPRING_MAIL_HOST:smtp.gmail.com}
+    port: ${SPRING_MAIL_PORT:587}
+    username: ${SPRING_MAIL_USERNAME:trungphandinh340@gmail.com}
+    password: ${SPRING_MAIL_PASSWORD:zqik zowr vngn cgsx}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+  thymeleaf:
+    cache: false
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:29092}
     consumer:
@@ -64,14 +77,26 @@ kafka:
   topics:
     email: ${KAFKA_EMAIL_TOPIC:email-notifications}
     notification: ${KAFKA_NOTIFICATION_TOPIC:notification-commands}
+    notification-dlt: ${KAFKA_NOTIFICATION_DLT_TOPIC:notification-commands-dlt}
   consumer:
     group-id: ${KAFKA_CONSUMER_GROUP:notification-service}
     concurrency: ${KAFKA_CONSUMER_CONCURRENCY:3}
     ack-mode: ${KAFKA_CONSUMER_ACK_MODE:MANUAL_IMMEDIATE}
     trusted-packages: ${KAFKA_CONSUMER_TRUSTED_PACKAGES:*}
+    value-default-type: com.techhub.app.commonservice.kafka.event.notification.NotificationCommand
+    error:
+      max-attempts: ${KAFKA_CONSUMER_MAX_ATTEMPTS:3}
+      backoff:
+        initial-interval: ${KAFKA_CONSUMER_BACKOFF_INITIAL:2000}
 
 management:
   endpoints:
     web:
       exposure:
         include: health,info,metrics,prometheus
+
+app:
+  email:
+    enabled: ${APP_EMAIL_ENABLED:true}
+    from: ${APP_EMAIL_FROM:no-reply@techhub.app}
+    reply-to: ${APP_EMAIL_REPLY_TO:}
