--- a/course-service/src/main/resources/application.yml
+++ b/course-service/src/main/resources/application.yml
@@ -6,6 +6,19 @@ spring:
     name: COURSE-SERVICE
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:dev}
+  datasource:
+    url: ${COURSE_DB_URL:jdbc:postgresql://${DB_HOSTNAME:localhost}:${DB_PORT:5432}/techhub3}
+    username: ${COURSE_DB_USERNAME:${DB_USERNAME:postgres}}
+    password: ${COURSE_DB_PASSWORD:${DB_PASSWORD:postgres}}
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    show-sql: false
+    properties:
+      hibernate:
+        dialect: com.techhub.app.commonservice.jpa.PostgreSQLEnumDialect
+        format_sql: true
   zipkin:
     base-url: ${SPRING_ZIPKIN_BASE_URL:http://${HOST_IP_ADDRESS:localhost}:9411/}
 
